tests/errors/undefined.slpx
(set x 10)
(set y 20)
(set z (int/add x undefined_var))
(putln "done")

